--- a/src/app/views/emails/cancellation.hbs
+++ b/src/app/views/emails/cancellation.hbs
@@ -1,22 +1,17 @@
-<style>
-  @media (max-width: 400px) {
-    .cancellation-container {
-      padding: 20px !important;
-    }
-  }
-
-  .title {}
-</style>
-
-<div class="title" style="
+<div style="
   width: 100%;
   height: 60px;
+  line-height: 60px;
+  text-align: center;
   background-color: #f1b71c;">
-  <h3 style="display: block; margin: auto; color: #fff; text-align: center; padding: 15px 0">AGENDAMENTO CANCELADO</h3>
+  <h3 style="color: #fff;
+  display: inline-block;
+  vertical-align: middle;
+  line-height: normal;">AGENDAMENTO CANCELADO</h3>
 </div>
 
-<div style="padding: 10%" class="cancellation-container">
-  <h3 style="text-align: center; color: #f1b71c; font-size: 22px">Olá, {{ user }}!</h3>
+<div style="padding: 5% 10% 10% 10%; font-weight: 300;" class="cancellation-container">
+  <h3 style="text-align: center; color: #f1b71c; font-size: 22px;">Olá, {{ user }}!</h3>
   <p>Esta é uma confirmação do cancelamento de agendamento que você realizou, confira os detalhes abaixo:</p>
   <p>
     Agendado para o {{ date }}. <br />
