--- a/src/app/views/emails/partials/footer.hbs
+++ b/src/app/views/emails/partials/footer.hbs
@@ -1,15 +1,8 @@
 <br />
-<div style="display: flex; width: 100%;" class="footer-container">
+<div style="display: flex; width: 100%;">
   <div style="display: flex; text-align: center; margin: 0 auto;">
     <img src="https://i.ibb.co/m9L2zxJ/icon.png" alt="icon" border="0"
       style="width: 15px; height: 15px; margin-right: 5px;">
-    <span class="footer" style="font-size: 12px; margin-bottom: 3px;">Equipe Petscão</span>
+    <span style="font-size: 12px; font-weight: 300;">Equipe Petscão</span>
   </div>
-  <style>
-    @media (max-width: 400px) {
-      .footer {
-        font-size: 10px !important;
-      }
-    }
-  </style>
 </div>
